--- a/src/components/sidebar/Sidebar.scss
+++ b/src/components/sidebar/Sidebar.scss
@@ -1,29 +1,36 @@
-.sidebar{
-  display:flex;
-  flex:0.35;
+.sidebar {
+  display: flex;
+  flex: 0.35;
   height: 100vh;
-  background-color: gray;
-  .sidebarLeft{
+  background-color: #33363d;
+
+  .sidebarLeft {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 15px;
-    background-color: black;
+    background-color: #1a1c20;
     padding: 7px 15px;
-    .sidebarIcon{
+
+    .sidebarIcon {
       width: 60px;
       height: 60px;
       background-color: gray;
       border-radius: 9999px;
       margin-bottom: 10px;
       position: relative;
-      img{
+      margin-top: 7px;
+
+      img {
         position: absolute;
         width: 50px;
-        top:50%;
+        top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
       }
     }
+  }
+
+  .sidebarRight {
+    background-color: #2b2d33;
   }
 }
