--- a/src/components/sidebar/Sidebar.scss
+++ b/src/components/sidebar/Sidebar.scss
@@ -30,7 +30,36 @@
     }
   }
 
-  .sidebarRight {
-    background-color: #2b2d33;
-  }
-}
+    .sidebarRight {
+      background-color: #2b2d33;
+      width: 300px;
+
+      .sidebarTop {
+        color: #ffffff;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 20px;
+      }
+
+      .sidebarChannels {
+        padding: 13px;
+
+        .sidebarChannelsHeader {
+          color: white;
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          margin-top: 5px;
+
+          .sidebarHeader {
+            display: flex;
+          }
+
+          .sidebarAddIcon {
+            cursor: pointer;
+          }
+        }
+      }
+    }
+    }
